Helm/wb-yaml/05_service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: weather-bot
  name: weather-rest
spec:
  selector:
    app: weather-bot
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
