Helm/wb-yaml/06_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: weather-rest
  namespace: weather-bot
spec:
  ingressClassName: nginx
  rules:
  - host: weather.akj.ru
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: weather-rest
            port:
              number: 8080
